--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "Foodfy",
   "version": "1.0.0",
   "description": "",
-  "main": "scripts.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npm-run-all -p nodemon browsersync",
